tdf#96357 Switching icon theme doesn't update toolbar or statusbar

Regression of 6480b4d11a0cf2dd489d30b6290aa6d831704a45

Change-Id: I00141b3d9c5ea8dc813530a2ee095d61a35b3c04
Reviewed-on: https://gerrit.libreoffice.org/20591
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
Tested-by: Maxim Monastirsky <momonasmon@gmail.com>